--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -13,7 +13,7 @@
     display: flex;
     gap: 21px;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
     @include mixins.respond(desktop) {
       justify-content: flex-start;
